# mot

./: .gitignore  .travis.yml  Cargo.toml  appveyor.yml  bone  bones  config.toml
ci/: before_deploy.ps1  before_deploy.sh
examples/: info.rs  mot.rs  mot_info.rs
mot/: Cargo.toml
mot-cli/: Cargo.toml
mot-cli/src/: descriptor.rs  main.rs
mot/src/: lib.rs  write.rs
mot/src/qualified/: write.rs
src/: const_table.rs  lib.rs  qualified.rs  write.rs  write_alt.rs
src/qualified/: write.rs
src/read/: mod.rs  utilities.rs
