[package]
name = "mot-cli"
version = "0.1.0"
authors = ["Waelwindows <waelwindwos@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mot = { version = "*", path="../mot" }
diva_db = { git="https://github.com/Waelwindows/diva_db" }
structopt = "0.3.14"
nom = "5.1.0"
anyhow = "1.0.31"
bvh_anim = "0.4.0"
log = "0.4.8"
env_logger = "0.7.1"
slab_tree = "0.3.2"
toml = "0.5.7"
serde = { version="1.0.118", features=["derive"] }
